# working_hours_tracker

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json  dockerfile  setup.sh
.devcontainer/starting_scripts/: setup_git.sh  setup_hatch.sh
src/working_hours_tracker/: __init__.py  default.env  display.py  main.py  settings.py  time_file.py
src/working_hours_tracker/ui/: main_window.ui
