[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "working_hours_tracker"
description = ""
readme = "README.md"
requires-python = ">=3.10"
keywords = []
authors = [
    {name = "maromei", email = "maromei@proton.me"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "python-dotenv",
    "pyqt5"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/maromei/working_hours_tracker#readme"
Issues = "https://github.com/maromei/working_hours_tracker/issues"
Source = "https://github.com/maromei/working_hours_tracker"

[tool.hatch.version]
path = "src/working_hours_tracker/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/working_hours_tracker"]

#####################
### ENV - DEFAULT ###
#####################

[tool.hatch.envs.default]
path = ".hatch"

[tool.hatch.envs.default.scripts]
main = "python src/working_hours_tracker/main.py"

[tool.hatch.envs.default.env-vars]

###########################
### ENV - hatch_windows ###
###########################

# The venv structure differes on windows formats, so if you are trying to
# run this from a windows computer using the hatch created envs
# --> use this

[tool.hatch.envs.hatch_windows]
path = ".hatch_windows"

[tool.hatch.envs.hatch_windows.scripts]
main = "python src/working_hours_tracker/main.py"

[tool.hatch.envs.hatch_windows.env-vars]

#######################
### ENV - IPYKERNEL ###
#######################

[tool.hatch.envs.ipykernel]
extra-dependencies = [
    "ipykernel"
]

[tool.hatch.envs.ipykernel.scripts]
install = "python -m ipykernel install --user --name working_hours_tracker --display-name \"General\""

[tool.hatch.envs.ipykernel.env-vars]

###################
### ENV - BUILD ###
###################

[tool.hatch.envs.build]

[tool.hatch.envs.build.scripts]

[tool.hatch.envs.build.env-vars]

##################
### ENV - DOCS ###
##################

[tool.hatch.envs.docs]

[tool.hatch.envs.docs.scripts]

[tool.hatch.envs.style]
skip-install = true
detached = true
dependencies = [
    "pre-commit",
    "black"
]
